--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -25,6 +25,7 @@
 .modal__container {
   max-width: 730px;
   width: 100%;
+  box-sizing: border-box;
   border-radius: 8px;
   background-color: #fff;
   padding: 32px 50px;
@@ -42,6 +43,10 @@
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
+}
+
+.modal__submit-btn:hover {
+  opacity: 0.8;
 }
 
 .modal__form {
@@ -112,6 +117,11 @@
   font-weight: 300;
   color: #212121;
   opacity: 0.4;
+  background-image: url("../images/spots-images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: transparent;
 }
 
 .modal__close-btn:hover {
